# shellhound

./: .gitignore  README.md  index.html  package.json  tailwind.config.js
data/: entities.json  financials.json  relationships.json
scraper/: __init__.py  crawler.py  irs.py  main.py  propublica.py  pyproject.toml  requirements.txt  sunbiz.py
src/: App.tsx  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: NetworkGraph.tsx
src/pages/: Dashboard.tsx  Financials.tsx  Relationships.tsx  Settings.tsx
